GJ 26/09/05
- Removed example.hot.InetFactory class: old and unused.
- Updated exscript.txt config file.

GJ 22/09/05
- Updated examples config files.
- Refactored example.hot.* package (now using WireByMethod class).
- Updated example docs.
- Updated REAME file (fixed command line instruction).

SV 17/09/05
- Fixed a bug in IncrementalFreq: When a negative item is submitted, the number
  of inserted items (n) is now not increased.
- Added method add(int i,int k) in IncrementalFreq, that can add an item k times
  at once.

MJ 17/09/05
- Cleanup of peersim.util package; mainly docs, but some bugfixes too
  eg in IncrementalFreq.equals. 
- new methods in GraphIO and GraphFactory
- Cleanup of peersim.reports; fixed a bug too: GraphObserver did not work
  correctly if more overlays were observed simultaneously.
- fixed bug in simulators related to setting end time (did not work with
  multiple experiments)

MJ 15/09/05
- Finishing the cleanup of the dynamics package
- Added WireByMethod which is quite powerful and flexible for wiring
  networks. We no longer need to define a separate Control for all different
  kinds of networks.

MJ 13/09/05
- Cleaned up the dynamics package. A noticable change that will break
  existing config files: GrowingNetwork is gone. Its functionality is
  provided by DynamicNetwork. A small change though: config par "percentage"
  is no longer supported, but you can set -1<add<1 which is taken as
  proportion. The "down" parameter is gone too: it was only a hack, that
  will maybe reincarnate in another class.
- renamed peersim.cdsim.Simulator to CDSimulator

MJ 11/09/05
- Some more classdocs cleanup, some refactoring of config property loading
- Added WireRegRootedTree that can wire a regular rooted tree

MJ 10/09/05
- Revised the vector package again, including some major refactoring and
  complete revision of documentation.
- Changed the behavior of the vector observers, now they accept only one method